SERVER-20579 do not start threads in replication coordinator external state if arbiter